# gra

./: .dockerignore  .gitignore  .render.yaml  docker-compose.yml  pgbouncer.ini  postgresql_custom.conf
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt  the_model.joblib
backend/alembic/: env.py
backend/alembic/versions/: 5794a4c1a5b2_add_ago_and_pms_columns_to_trucks_table.py  de435a66eba2_add_branch_index_to_daily_entries.py
backend/app/: main.py
backend/app/authentication/: auth.py  crud_auth.py  router_auth.py
backend/app/crud/: entries.py  hashing.py  user.py
backend/app/database/: database.py
backend/app/models/: models.py
backend/app/routers/: entries.py  user.py
backend/app/schema/: schemas.py
client/: .gitignore  Dockerfile  package.json  vite.config.js
client/src/: ClaudeApp.jsx  main.jsx
client/src/components/: BranchAutoComplete.jsx  Dash.jsx  DashEd.jsx  DashInLiters.jsx  DashTrucks.jsx  DashboardCard.jsx  EditedSalesEntry.jsx  Login.jsx  NewSalesEntry.jsx  Register.jsx  StockSummary.jsx  WindEd.jsx
client/src/contexts/: AuthContext.jsx
nginx/: nginx.conf
nginx/conf.d/: app.conf
prometheus/: prometheus.yml
prometheus/rules/: application.rules
